force-app/main/default/objects/Sample__c.object
<CustomObject>
    <fields>
        <fullName>Patient__c</fullName>
        <description>The patient that the sample belongs to</description>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Samples</relationshipLabel>
        <relationshipName>Samples1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SID__c</fullName>
        <description>Sample Identification Number</description>
        <externalId>true</externalId>
        <label>SID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sample_Location__c</fullName>
        <description>Where the sample is being tested</description>
        <label>Sample Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Type__c</fullName>
        <label>Sample Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bone Marrow</fullName>
                </value>
                <value>
                    <fullName>Whole Blood</fullName>
                </value>
                <value>
                    <fullName>Serum</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
                <value>
                    <fullName>Cell Culture</fullName>
                </value>
                <value>
                    <fullName>DNA Pellet</fullName>
                </value>
                <value>
                    <fullName>Tissue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Sample testing status</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Arrived</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Checked In</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sample</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sample Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>